# calculator-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  model.py
app/api/v1/: controller.py  controllers.py  models.py  route.py  routes.py
app/api/v2/: controller.py  route.py
app/core/: config.py
app/services/: calculator_service.py  history_service.py
docs/ADR/: ADR_general.md  ADR_v1.md  ADR_v2.md
tests/api/: api_test.py  test_calculator.py
tests/services/: test_calculator_service.py  test_history_service.py
