[tool.poetry]
name = "calculator-api"
version = "0.1.0"
description = ""
authors = ["tarikkeser <ahmettariknl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.2,<0.35.0"
pydantic = ">=2.11.4,<3.0.0"
pydantic-settings = ">=2.9.1,<3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]